--- a/package.json
+++ b/package.json
@@ -53,11 +53,14 @@
   },
   "dependencies": {
     "@adonisjs/auth": "^8.2.2",
+    "@adonisjs/bouncer": "^2.3.0",
     "@adonisjs/core": "^5.8.7",
     "@adonisjs/lucid": "^18.2.0",
     "@adonisjs/repl": "^3.1.11",
     "@adonisjs/session": "^6.4.0",
-    "axios": "^1.1.3",
+    "@types/lodash": "^4.14.191",
+    "axios": "1.1.3",
+    "lodash": "^4.17.21",
     "luxon": "^3.0.4",
     "pg": "^8.8.0",
     "phc-argon2": "^1.1.3",
