--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,9 @@
       "@japa/preset-adonis/build/adonis-typings",
       "@adonisjs/lucid",
       "@adonisjs/session",
-      "@adonisjs/auth"
+      "@adonisjs/auth",
+      "@adonisjs/bouncer",
+      "@types/lodash"
     ]
   }
 }
